Function ffs_reload() works on a read-only mount, so remove the call to ffs_snapshot_mount() as it would panic later with "already on list" when remounting read-write.

Should fix PR kern/48211 (Unclean shutdown with active snapshot causes
panic during reboot)